[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refrag-launcher"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "websockets",
    "python-dotenv",
    "pyinstaller>=6.19.0",
]

[project.scripts]
refrag = "launch_refrag:main"

[tool.setuptools]
py-modules = ["launch_refrag"]
